k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skala-app
  namespace: skala-practice
  labels:
    app: skala-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skala-app
  template:
    metadata:
      labels:
        app: skala-app
    spec:
      tolerations:
        - key: "control-plane"
          operator: "Equal"
          value: "amdp"
          effect: "NoSchedule"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - skala-app
                topologyKey: "kubernetes.io/hostname"
      containers:
      - name: skala-container
        image: amdp-registry.skala-ai.com/skala25a/sk008-my-app:1.0.kaniko-docker-36-4b113d7ed7f9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
