k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skala-service
  namespace: skala-practice
spec:
  selector:
    app: skala-app
  ports:
    - protocol: TCP
      port: 80           # 클라이언트가 접근할 포트
      targetPort: 8080   # Spring Boot 앱이 내부적으로 리스닝하는 포트
  type: ClusterIP
