k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod  #  그대로 유지 (TLS 발급용)
  name: sk008-my-app-ingress                           #  Ingress 이름 수정
  namespace: skala-practice
spec:
  ingressClassName: public-nginx                       #  public-nginx 사용
  rules:
  - host: sk008.skala25a.project.skala-ai.com    # 새로운 도메인 지정
    http:
      paths:
      - backend:
          service:
            name: skala-service                       #  연결할 서비스 이름 수정
            port:
              number: 8080                             #  서비스 포트
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sk008.skala25a.project.skala-ai.com        #  TLS에 들어가는 도메인도 수정
    secretName: sk008-cm-auto-tls-secret
